--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -80,8 +80,8 @@
 					Address: {{student.address}}<br>
 					Phone: {{student.phone}}<br>
 					Current Passes: {{student.currentPasses}}<br><br>
-					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logStudent(student.studentId, student.client)">Progress Chart</button>
-					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "editStudent(student.studentId, student.client)">Edit Student</button>
+					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logToPage(student.studentId, student.client, 'LineChart.html')">Progress Chart</button>
+					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logToPage(student.studentId, student.client, 'EditStudent.html')">Edit Student</button>
 				</div>
 			</div>
 		</div>
