--- a/Front-end/EditStudent.html
+++ b/Front-end/EditStudent.html
@@ -31,6 +31,8 @@
 	</head>
 	<body>
 		<div class = "exterior" ng-app = "gideonApp" ng-controller = "editStudentCtrl">
+			<button invis class="hoverable" id="backButton" onclick="location.href='StudentList.html'">Back to Student List</button>
+
 			<h1>Edit {{student.client}}</h1>
 			<!--Form used for editing a student in the database-->
 			<form name = "form">
