--- a/Front-end/InsertStudent.html
+++ b/Front-end/InsertStudent.html
@@ -31,6 +31,8 @@
 	</head>
 	<body>
 		<div class = "exterior" ng-app = "gideonApp" ng-controller = "insertStudentCtrl">
+			<button class="hoverable" id="backButton" onclick="location.href='StudentList.html'">Back to Student List</button>
+
 			<h1>Insert Student</h1>
 			<!--Form used for adding a new student into the database-->
 			<form name = "form">
