--- a/Front-end/InsertRecord.html
+++ b/Front-end/InsertRecord.html
@@ -31,6 +31,8 @@
 	</head>
 	<body>
 		<div class = "exterior" ng-app = "gideonApp" ng-controller = "insertRecordCtrl">
+			<button invis class="hoverable" id="backButton" onclick="location.href='StudentList.html'">Back to Student List</button>
+
 			<h1>Insert Record</h1>
 			<!--Form used for adding a new record for an existing student into the database-->
 			<form name = "form">
