--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -81,12 +81,14 @@
 				</div>
 				<!--Additional information and buttons hidden in an accordion-->
 				<div id="expandableContainer" ng-class="{'collapsedContent':student.studentId!=expandedStudentId, 'expandedContent':student.studentId==expandedStudentId}">
+					ID: {{student.studentId}}<br>
 					Gender: {{student.gender}}<br>
 					Address: {{student.address}}<br>
 					Phone: {{student.phone}}<br>
 					Current Passes: {{student.currentPasses}}<br><br>
-					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logToPage(student.studentId, student.client, 'LineChart.html')">Progress Chart</button>
-					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logToPage(student.studentId, student.client, 'EditStudent.html')">Edit Student</button>
+					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logToPage(student, 'LineChart.html')">Progress Chart</button>
+					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logToPage(student, 'EditStudent.html')">Edit Student</button>
+					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logToPage(student, 'RecordList.html')">Record List</button>
 				</div>
 			</div>
 		</div>
