--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -30,9 +30,8 @@
 	<body>
 		<!--Selection buttons in the header to move to insert and update pages-->
 		<div id = "header">
-			<button type = "button" class = "hoverable" id = "studentBtn" onclick = "location.href='InsertStudent.html'">Insert Student</button>
-			<button type = "button" class = "hoverable" id = "updateBtn" onclick = "location.href='UpdateRecord.html'">Update Record</button>
-			<button type = "button" class = "hoverable" id = "insertBtn" onclick = "location.href='InsertRecord.html'">Insert Record</button>
+			<button type = "button" class = "hoverable" id = "listBtn"   onclick = "location.href='RecordList.html'">Record List</button>
+			<button type = "button" class = "hoverable" id = "insertBtn" onclick = "location.href='InsertStudent.html'">Insert Student</button>
 		</div>
 		<br/>
 
@@ -86,9 +85,9 @@
 					Address: {{student.address}}<br>
 					Phone: {{student.phone}}<br>
 					Current Passes: {{student.currentPasses}}<br><br>
-					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logToPage(student, 'LineChart.html')">Progress Chart</button>
-					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logToPage(student, 'EditStudent.html')">Edit Student</button>
-					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "logToPage(student, 'RecordList.html')">Record List</button>
+					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "lineChartButton(student)">Progress Chart</button>
+					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "editStudentButton(student)">Edit Student</button>
+					<button type = "button" class = "hoverable" id = "accordionButton" ng-click = "preloadRecordsList(student)">Record List</button>
 				</div>
 			</div>
 		</div>
