--- a/Front-end/EditStudent.html
+++ b/Front-end/EditStudent.html
@@ -34,7 +34,7 @@
 			<h1>Edit {{student.client}}</h1>
 			<!--Form used for editing a student in the database-->
 			<form name = "form">
-				<div class="columnContainer" id="editStudentRow">
+				<div class="columnContainer" id="editRow">
 					<!--Name input, required field-->
 					<div class="threeColumn">
 						<label for = "student">Full Name</label><br>
@@ -73,7 +73,7 @@
 					</div>
 				</div><br>
 
-				<div class="columnContainer" id="editStudentRow">
+				<div class="columnContainer" id="editRow">
 					<!--Phone input, no required format-->
 					<div class="twoColumn">
 						<label for = "email">Phone</label><br>
@@ -87,7 +87,7 @@
 					</div>
 				</div><br>
 				
-				<div class="columnContainer" id="editStudentRow">
+				<div class="columnContainer" id="editRow">
 					<!--Gender selection-->
 					<div class="twoColumn">
 						<label for = "email">Gender</label><br>
