Record Stuff (third commit)
EditRecord is now fully functional, RecordList now has persistent filters that the site remembers between pages, and the pages have working buttons that allow for navigation.

--- a/Front-end/EditRecord.html
+++ b/Front-end/EditRecord.html
@@ -31,6 +31,8 @@
 	</head>
 	<body>		
 		<div class = "exterior" ng-app = "gideonApp" ng-controller = "editRecordCtrl">
+			<button invis class="hoverable" id="backButton" onclick="location.href='RecordList.html'">Back to Record List</button>
+
 			<h1>Edit Record</h1>
 			<!--Form for updating records that are already in the system-->
 			<form name = "form">
