--- a/Front-end/InsertRecord.html
+++ b/Front-end/InsertRecord.html
@@ -31,7 +31,7 @@
 	</head>
 	<body>
 		<div class = "exterior" ng-app = "gideonApp" ng-controller = "insertRecordCtrl">
-			<button invis class="hoverable" id="backButton" onclick="location.href='StudentList.html'">Back to Student List</button>
+			<button invis class="hoverable" id="backButton" onclick="location.href='RecordList.html'">Back to Record List</button>
 
 			<h1>Insert Record</h1>
 			<!--Form used for adding a new record for an existing student into the database-->
