--- a/Front-end/EditRecord.html
+++ b/Front-end/EditRecord.html
@@ -77,7 +77,7 @@
 					<div class="threeColumn">
 						<label for = "title">Book Title</label><br>
 						<div class="inputWrapperBig">
-							<select white big id = "title" name = "title" ng-model = "record.bookTitle" ng-options = "z disable when z.startsWith('Select') for z in titles" required>
+							<select white big id = "title" name = "title" ng-model = "record.bookTitle" ng-options = "z disable when z.startsWith('Select') for z in titles" ng-change = "didSetBook()" required>
 							</select>
 							<div class="invalidContainer" ng-class="{'invalid':form.title.$touched && form.title.$invalid}"></div>
 						</div>
@@ -130,7 +130,7 @@
 					</div>
 
 					<!--Simple number picker for instructors to enter the test time-->
-					<div id = "testTime">
+					<div id = "testTime" ng-show = "record.test">
 						<label for = "testTime">Test Time</label>
 						<div class="inputWrapper">
 							<input white type = "number" name = "testTime" min = "0" max = "1000" ng-model = "record.testTime">
@@ -143,7 +143,7 @@
 					</div>
 
 					<!--Simple number picker for instructors to enter the number of mistakes-->	
-					<div id = "mistakes">
+					<div id = "mistakes" ng-show = "record.test">
 						<label for = "mistakes">Mistakes</label>
 						<div class="inputWrapper">
 							<input white type = "number" name = "mistakes" min = "0" max = "1000" ng-model = "record.mistakes">
