--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -41,13 +41,13 @@
 
 			<!--Filter text blocks-->
 			<div class = "columnContainer" id = "filterContainer">
-				<div class = "twoColumn">
+				<div class = "column" style = "width:50%">
 					<p id = "filterText">Filter by Name: </p>
-					<input black id = "textFilter" name = "textFilter" type = "text" ng-model="clientFilter">
+					<input black big id = "textFilter" name = "textFilter" type = "text" ng-model="clientFilter">
 				</div>
-				<div class = "twoColumn">
+				<div class = "column" style = "width:50%">
 					<p id = "filterText">Filter by Email: </p>
-					<input black id = "textFilter" name = "textFilter" type = "text" ng-model="emailFilter">
+					<input black big id = "textFilter" name = "textFilter" type = "text" ng-model="emailFilter">
 				</div>
 			</div>
 
